# korean-sentence-splitter

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  kss.pyx  main.cpp  sentence_splitter.cpp  sentence_splitter.h  setup.py  test_splitter.cpp
googletest/include/gmock/: gmock-generated-matchers.h  gmock-generated-matchers.h.pump
googletest/include/gtest/: gtest-typed-test.h
googletest/include/gtest/internal/: gtest-internal.h  gtest-type-util.h  gtest-type-util.h.pump
